--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,33 @@
 <h1>New user</h1>
 
-<%= render 'form' %>
+<%= form_for @signup_form, url: users_path, method: :post do |f| %>
+  <% if @signup_form.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@signup_form.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+      <% @signup_form.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :login %><br>
+    <%= f.text_field :login %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :account_name %><br>
+    <%= f.text_field :account_name %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
 
 <%= link_to 'Back', users_path %>
