--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New user</h1>
 
-<%= form_for @signup_form, url: users_path, method: :post do |f| %>
+<%= form_for @signup_form do |f| %>
   <% if @signup_form.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@signup_form.errors.count, "error") %> prohibited this user from being saved:</h2>
