--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -1,12 +1,12 @@
 <h1>New user</h1>
 
-<%= form_for @signup_form do |f| %>
-  <% if @signup_form.errors.any? %>
+<%= form_for @signup do |f| %>
+  <% if @signup.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@signup_form.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2><%= pluralize(@signup.errors.count, "error") %> prohibited this user from being saved:</h2>
 
       <ul>
-      <% @signup_form.errors.full_messages.each do |message| %>
+      <% @signup.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
