--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Account Name</strong>
-  <%= @user.account.try(:name) %>
+  <%= Account.for_user(@user).name %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
